# AIP_Brain

./: .dockerignore  .editorconfig  .env.example  .gitignore  AIP_GOVERNANCE.md  CLEANUP_BASELINE.md  CONTRIBUTING.md  DOGFOOD_READY.md  LICENSE  PHASE5_HANDOFF_PROMPT.md  PHASE6_HANDOFF_PROMPT.md  README.md  ROADMAP.md  STATUS.md  TECH_DEBT.md  WORKLOG.md  pyproject.toml  run_backend.sh  start-aip.sh  start.sh  worklog.md  worklog_ask.md  worklog_session.md
.github/workflows/: ci.yml
agent-ctx/: impl-1-retrieval-eval-improvements.md  impl-3-vigil-retrieval-quality-gate.md  ruff-fix-e402-e501-agent.md  sprint534-implementation.md  task-budget-tune-integration-agent.md
archive/: worklog_ask_historical.md  worklog_historical.md
config/: aip.config.toml  aip.config.toml.broken  aip.config.toml.broken2  aip.config.toml.example  aip.config.toml.final_broken  enabled_models.json
data/: beast_soul.md
demo/aip_demo/: README.md  manifest.yaml
deploy/: Dockerfile  README.md  backup.sh  docker-compose.laptop.yml  docker-compose.production.yml  docker-compose.yml  health-check.sh  restore.sh
deploy/configs/: aip.config.laptop.toml  aip.config.production.toml
docs/: AIP_PROJECT_STATUS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  Maintenance_Protocol.md  README.md  TECH_DEBT.md  adr_hygiene_prompt.md  beast_domain_registry_v1.md  entity_aliases.md  implementation_status.md  phase3_exit_report.md
docs/decisions/: ADR-000-template.md  ADR-001-turn-level-corpus-ingestion.md  ADR-002-beast-domain-registry.md  ADR-003-beast-context-advisory.md  ADR-004-multi-corpus-architecture.md  ADR-005-aip-hall-model.md  ADR-006-wiki-architecture.md  ADR-007-knowledge-graph-architecture.md  ADR-008-semantic-session-context.md  ADR-009-cohort-synthesis.md  ADR-010-browser-extension-ingest.md  ADR-011-actor-role-boundaries.md  ADR-012-single-writer-sufficiency.md  ADR-013-retrieval-quality-validation-closure.md
docs/evals/: aip_alpha_gold.yaml
docs/hardening/: AI_FINGERPRINT_REGISTER.md  CHUNK_1_5_TRIAGE.md  CODE_DEBT_REGISTER.md  CURRENT_STATE_BASELINE.md  (+1 more)
examples/: run_workflow_01.py  workflow_01.yaml
failed/: README.md
gui/: __init__.py  api_client.py  app.py  components.py  config.py  main.py  shell.py  state.py  status_types.py  theme.py
logs/: README.md
prompts/: README.md  adversarial_eval.md  domain_coherence.md  faithfulness.md  synthesis.md
scripts/: cycle_15_full_dogfood_e2e.sh  dogfood_seed_corpus.sh  dogfood_smoke_test.sh  eval_retrieval.py  ingest_claude.py  retrieval_weight_tuning.py  start.sh  update_golden_ids.py  watch_import.sh
specs/: AIP_0_1_Phase1_BuildSpec_Rev1.3.docx  AIP_0_1_Phase1_BuildSpec_Rev1.3.md  AIP_0_1_Phase2_BuildSpec.md  AIP_0_1_Phase2_BuildSpec_Rev1.2.md  AIP_0_1_Phase3_BuildSpec_Rev1.1.md  AIP_0_1_Phase4_BuildSpec_Rev1.0.md  AIP_0_1_Phase5_BuildSpec_Rev1.0.md  AIP_0_1_Phase6_BuildSpec_Rev1.0.md  AIP_0_1_Phase7_BuildSpec_Rev1.0.md  AIP_0_1_Phase8_BuildSpec_Rev1.0.md  AIP_0_1_Phase9_BuildSpec_Rev1.0.docx  AIP_0_1_Phase9_BuildSpec_Rev1.0.md  PHASE2_IMPORT_NOTES.md
tests/: test_ace_playbook.py  test_actors_budget_integration.py  test_adapter_promotion_integration.py  test_adaptive_router.py  test_adversarial_eval.py  test_anxiety_detector.py  test_api_admin_memory.py  test_api_chat.py  test_api_projects_sessions.py  test_api_review_artifacts.py  test_app_factory.py  test_appendix_d_constraints.py  test_artifact_lifecycle.py  test_artifact_versioning.py  test_artifact_workbench_cycle9.py  test_ask.py  test_ask_workbench_cycle41.py  test_async_infrastructure.py  test_auth.py  test_auth_session_store.py  test_beast_actor.py  test_beast_counsel_cycle5.py  test_beast_lifespan_wiring.py  test_budget_system.py  test_campaign1_usability.py  test_canonical_pipeline.py  test_chunk3_sexton_wiring.py  test_chunk4_embedding_backfill.py  test_chunk5_retrieval_honesty.py  test_chunk5_retrieval_honesty_v2.py  test_chunk7_retrieval_config.py  test_cli.py  test_codex.py  test_collaborator_access.py  test_collaborator_secret_transport.py  test_commit_node.py  test_config_toggleability.py  test_config_validation.py  test_context_reset.py  test_corpus_ingestion_reliability.py  (+178 more)
workflows/: adversarial_redteam_v1.yaml  corpus_maintenance_v1.yaml  incremental_update_v1.yaml  synthesis_session_v1.yaml
(+366 files in other folders)
