[project]
name = "aip"
version = "0.1.0"
description = "AI Poiesis — local-first sovereign knowledge engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20",
    "httpx>=0.24",
    "fastapi>=0.100",
    "bcrypt>=4.0",
    "uvicorn>=0.20",
]

[project.scripts]
aip = "aip.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "COM"]
ignore = ["COM812"]  # handled by ruff format

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]