[project]
name = "aip"
version = "0.1.0"
description = "AI Poiesis — local-first sovereign knowledge engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20",
    "httpx>=0.24",
    "fastapi>=0.100",
    "bcrypt>=4.0",
    "uvicorn>=0.20",
    "structlog>=24.0",
]

[project.scripts]
aip = "aip.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

# Exclude generated/historical/archived files from linting
extend-exclude = [
    "specs/",          # Build process specifications, not active code
    "prompts/",        # Template files, not Python
]

[tool.ruff.lint]
# Baseline rule set: formatting, imports, pyflakes, basic pydocstyle.
# Do NOT enable strict complexity/docstring/annotation rules here.
# See docs/implementation_status.md for the lint baseline rationale.
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
# Ensure import sorting is consistent with the existing codebase style.
known-first-party = ["aip"]

[tool.ruff.format]
# Ruff formatter settings — matches the existing codebase style.
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]