[project]
name = "aip"
version = "0.1.0"
description = "AI Poiesis — local-first sovereign knowledge engine"
license = {text = "BUSL-1.1"}
requires-python = ">=3.11"
classifiers = [
    "License :: Other/Proprietary License",
]
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20",
    "httpx>=0.24",
    "fastapi>=0.100",
    "bcrypt>=4.0",
    "uvicorn>=0.20",
    "structlog>=24.0",
    "ollama>=0.6.2",
    "gradio>=6.15.2",
    "requests>=2.34.2",
    "nicegui>=3.12.1",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.14.0",
    "networkx>=3.0",
]

[project.scripts]
aip = "aip.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aip"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 120

# Exclude generated/historical/archived files from linting
extend-exclude = [
    "specs/",          # Build process specifications, not active code
    "prompts/",        # Template files, not Python
]

[tool.ruff.lint]
# Baseline rule set: formatting, imports, pyflakes, basic pydocstyle.
# Do NOT enable strict complexity/docstring/annotation rules here.
# See docs/implementation_status.md for the lint baseline rationale.
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.isort]
# Ensure import sorting is consistent with the existing codebase style.
known-first-party = ["aip"]

[tool.ruff.format]
# Ruff formatter settings — matches the existing codebase style.
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "fastapi>=0.136.3",
    "nicegui>=3.12.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "python-multipart>=0.0.29",
    "ruff>=0.4",
    "uvicorn>=0.48.0",
]
